initial working version

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "solve/storage": "*"
+        "solve/storage": "*",
+        "solve/http": "*"
     },
     "autoload": {
         "psr-0": { "Solve\\Router\\": "" }
